--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -3,7 +3,7 @@
 	<radio-group class="radio-group"  wx:if="{{address.info!='没有填写地址记录'}}" bindchange="radioChange" data-id="{{item.id}}" >
 		<view class='content_list' wx:for='{{address}}'>
 			<view class="radio" >
-				<radio value="{{item.id}}" color='#fff'  checked = "{{item.status == 1 ? 'true':''}}" />
+				<radio value="{{item.id}}"  color='#02A0E6'  checked = "{{item.status == 1 ? 'true':''}}" />
 			</view>
 			<view class='add_information' bindtap="{{is_select_address}}"  data-tel='{{item.harvester_phone_num}}' data-name='{{item.harvester}}' data-address='{{item.address_name}}{{item.harvester_real_address}}'  data-id='{{item.id}}' name="aaa" >
 				<view>
