--- a/storage/pages/realtime_data/realtime_data.wxml
+++ b/storage/pages/realtime_data/realtime_data.wxml
@@ -22,21 +22,21 @@
                     <view class="temperature">
                         <view class="temp-in">
                             <text class="humiture-title">仓储温度：</text>
-                            26.3℃
+                            {{inTemp}}℃
                         </view>
                         <view class="temp-out">
                             <text class="humiture-title">室外温度：</text>
-                            26.3℃
+                            {{outTemp}}℃
                         </view>
                     </view>
                     <view class="humidity">
                         <view class="humi-in">
                             <text class="humiture-title">仓储湿度：</text>
-                            79.3%
+                            {{inHumi}}%
                         </view>
                         <view class="humi-out">
                             <text class="humiture-title">室外湿度：</text>
-                            79.3%
+                            {{outHumi}}%
                         </view>
                     </view>
                 </view>
