--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -344,6 +344,8 @@ radio .wx-radio-input.wx-radio-input-checked::before {
 .sundry1 {
   background: #fff;
   margin-top: 4rpx;
+  margin-bottom:100rpx;
+
 }
 
 .sundry-li {
@@ -379,7 +381,6 @@ radio .wx-radio-input.wx-radio-input-checked::before {
 .buts {
   width: 200rpx;
   height: 100rpx;
-  line-height: 100rpx;
   color: #fff;
   text-align: center;
   line-height: 100rpx;
@@ -828,7 +829,7 @@ radio .wx-radio-input.wx-radio-input-checked::before {
 }
 
 .savetitle {
-  width: 185rpx;
+  width: 200rpx;
 }
 
 .srcoll_view {
