--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -139,7 +139,7 @@
           </view>
         </view>
         <text class="project-title">正在众筹</text>
-        <view class="zc-item-box" style="height: {{Height}}rpx">
+        <view class="zc-item-box" style="height: {{Height}}px">
           <view class="zc-item" wx:for="{{crowdList}}" wx:key="index">
             <view class="left-img">
               <image src="{{url}}{{item.goods_show_image}}" />
