--- a/storage/pages/realtime_data/realtime_data.wxml
+++ b/storage/pages/realtime_data/realtime_data.wxml
@@ -43,8 +43,10 @@
             </view>
         </view>
         <view class="temp-echarts">
+            <!-- <view> -->
             <ec-canvas id="mychart-one" canvas-id="mychart-multi-one" ec="{{ ecOne}}"></ec-canvas>
             <ec-canvas id="mychart-two" canvas-id="mychart-multi-two" ec="{{ ecTwo }}"></ec-canvas>
+            <!-- </view> -->
         </view>
     </swiper-item>
     <swiper-item class="overflowYauto">
