--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -266,7 +266,7 @@ radio .wx-radio-input.wx-radio-input-checked::before {
 
 .direct_mail {
   font-size: 28rpx;
-  padding: 26rpx;
+  padding: 20rpx;
   line-height: 42rpx;
   display: flex;
   align-items: center;
@@ -304,7 +304,7 @@ radio .wx-radio-input.wx-radio-input-checked::before {
 .is_invoice2 {
   display: flex;
   align-items: center;
-  padding: 22rpx 10rpx 22rpx 25rpx;
+  padding: 22rpx 20rpx;
   border-bottom: solid 1rpx #e4e4e4;
 }
 
@@ -769,6 +769,7 @@ radio .wx-radio-input.wx-radio-input-checked::before {
   font-size: 25rpx;
   padding-right: 20rpx;
   color: #333;
+  flex: 1;
 }
 
 .add_information text {
