--- a/storage/pages/realtime_data/realtime_data.wxss
+++ b/storage/pages/realtime_data/realtime_data.wxss
@@ -17,4 +17,8 @@ swiper.swiper-container{min-height: 1020rpx; flex: 1;}
 .humiture-data .humiture-title{color: #333;}
 .temp-echarts{width: 700rpx; margin: 0 auto; flex: 1; overflow-y: auto;}
 
-
+.history-nav{display: flex; align-items: center; font-size: 28rpx; padding: 20rpx; color: #93291f;}
+.history-nav .history-date{display: flex; border: 1px solid #93291f; border-radius: 6rpx; padding: 12rpx 6rpx; margin-left: 14rpx;}
+.history-nav .history-date .section{display: flex;}
+.history-nav .history-date .section .section__title{margin: 0 10rpx;}
+.history-nav .history-btns text{display: inline-block; padding: 10rpx; text-align: center; background-color: transparent; border: 1px solid #93291f; border-radius: 4rpx; color: #93291f; margin-left: 10rpx;}
