--- a/app.wxss
+++ b/app.wxss
@@ -75,8 +75,8 @@ radio .wx-radio-input.wx-radio-input-checked::before{
    width: 16rpx; 
    height: 16rpx; 
    text-align: center;
-    font-size:0rpx; /* 对勾大小 去掉 */
-  background-color: #02A0E6; 
+   font-size:0rpx; 
+   background-color: #02A0E6; 
    transform:translate(-50%, -50%) scale(1);
    -webkit-transform:translate(-50%, -50%) scale(1);
    
