--- a/pages/goods_detail/goods_detail.wxml
+++ b/pages/goods_detail/goods_detail.wxml
@@ -79,11 +79,19 @@
       <view class='inventory'>库存888片</view>
       <view class='sales'>销量213片</view>
     </view>
+    
     <view class='other_info'>
       <view class='other_info_list'>
         <image class="other_info_img" src="img/u2151.png" mode="widthFix"></image>
         <text class="other_info_text">7*24客服</text>
+        <image class="other_info_img" src="img/u2151.png" mode="widthFix"></image>
+        <text class="other_info_text">7*24客服</text>
+        <image class="other_info_img" src="img/u2151.png" mode="widthFix"></image>
+        <text class="other_info_text">7*24客服</text>
+        <image class="other_info_img" src="img/u2151.png" mode="widthFix"></image>
+        <text class="other_info_text">7*24客服</text>
       </view>
+      
     </view>
   </view>
   <view class='ser-type' bindtap='showFlag' wx:if="{{goods.goods_standard!=0}}">
