--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -84,7 +84,7 @@
       </view>
     </view>
   </view>
-  <view class='list-content' style='margin-bottom:100rpx'>
+  <view class='list-content' >
     <view wx:for='{{lista}}' class='ifor_list' data-url="{{item.src}}" bindtap="mycollect">
       <view class='left'>
         <view class='list-ico'>
