--- a/storage/pages/zcSettle/zcSettle.wxml
+++ b/storage/pages/zcSettle/zcSettle.wxml
@@ -189,12 +189,13 @@
     <view class='is_invoice2'>
       <checkbox-group bindchange="checkboxChanges">
         <label class="checkbox">
-          <checkbox value="选择仓储年限" checked="{{is_checked==true?'true':''}}" /> 选择仓储年限
+          <checkbox value="选择仓储年限" checked="{{is_checked==true?'true':''}}" />
+          选择仓储年限
         </label>
       </checkbox-group>
-      <image class="tips_img" src="/pages/settlement/img/u927.png" mode="widthFix"></image>
-      <view style='font-size:23rpx;color:#949494;margin-left:8rpx;'>*必选，默认1年</view>
-      <view class='invoice_money text_red' style='margin-left:166rpx; '>¥ 0.00</view>
+      <!-- <image class="tips_img" src="img/u927.png" mode="widthFix"></image>
+      <view style='font-size:23rpx;color:#949494;margin-left:8rpx;'>*必选，默认1年</view> -->
+      <view class='invoice_money text_red'>¥ 0.00</view>
     </view>
     <view class='go_invoice_information'>
       <view>选择仓储年限</view>
