--- a/pages/forget_password/forget_password.wxml
+++ b/pages/forget_password/forget_password.wxml
@@ -5,15 +5,15 @@
     <view class='list_a'>
       <view class="section section_top">
         <view class="section_title">手机号码</view>
-        <input name="harvester" placeholder="请输入手机号码" value="" bindchange="bindnewChange" />
+        <input name="harvester" placeholder="请输入手机号码" value="" bindinput="bindnewChange" />
       </view>
       <view class="section">
         <view class="section_title">新的支付密码</view>
-        <input name="harvester_phone_num" placeholder="请输入登录密码" value="" bindchange="bindoldChange" type="number" password />
+        <input name="harvester_phone_num" placeholder="请输入登录密码" value="" bindblur="bindoldChange" type="number" password />
       </view>
       <view class="section">
         <view class="section_title">重新输入密码</view>
-        <input name="harvester_phone_num" placeholder="请重新输入登录密码" value="" bindchange="bindoldChange" type="number" password />
+        <input name="harvester_phone_num" placeholder="请重新输入登录密码" value="" bindblur="bindoldChange" type="number" password />
       </view>
       <view class="section">
         <view class="section_title">验证码</view>
