--- a/storage/pages/out_of_warehouse/out_of_warehouse.wxml
+++ b/storage/pages/out_of_warehouse/out_of_warehouse.wxml
@@ -15,9 +15,9 @@
             <view class="real-time-stock">
                 <view class="real-time-title">您的实时存茶</view>
                 <view class="stock-box">
-                    <text class="stock-num">11</text>
+                    <text class="stock-num">1222211</text>
                     件
-                    <text class="stock-num">11</text>
+                    <text class="stock-num">222</text>
                     提
                     <text class="stock-num">11</text>
                     片
